[package]
name = "rocks-delay"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = "^0.20"
anyhow = "^1.0"
chrono = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
uuid = { version = "^1.0", features = ["v4"] }

# 异步
tokio = { version = "^1.0", features = ["full"] }
tokio-util = { version = "^0.7", features = ["full"] }
tokio-stream = "^0.1"
tokio-macros = "^1.8"
futures = "^0.3"
# 并发容器
crossbeam = "^0.8"
